--- a/css/style.css
+++ b/css/style.css
@@ -2924,7 +2924,7 @@ header .topbar-white {
 .header1 .navbar-header {
 	width: 100%;
 	border-bottom: 1px solid #e7e7e7;
-	background-color: #0d6efd;
+	background-color: #1d1e20;
 }
 
 .header1 .navbar-brand {
